[package]
name = "rocm_smi_lib_sys"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["WhiskyAKM"]
description = "bindings for rocm_smi_lib"
repository = "https://github.com/PTFOPlayer/rocm_smi_lib"
categories = ["api-bindings", "external-ffi-bindings", "hardware-support"]
keywords = ["radeon", "rsmi", "hip", "rocm", "gpu"]

[dependencies]
libc = "0.2.158"
libloading = "0.8.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3